# nous-center

./: .gitignore  CLAUDE.md  TODOS.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260706_91fbe4eca0b3_add_execution_tasks_api_key_id.py  20260706_be779bfc6f87_baseline.py
backend/configs/: external_providers.yaml  hardware.2gpu.yaml  hardware.3gpu.yaml  hardware.yaml  model_paths.yaml  model_roots.yaml  models.yaml
backend/configs/models.d/: cosyvoice2.yaml  gemma-4-26b-a4b-it-awq-4bit.yaml  gemma-4-26b-a4b-it-gptq-int4.yaml  gemma-4-26b-a4b-it.yaml  indextts2.yaml  moss_tts.yaml  qwen2_5_vl_7b_instruct.yaml  qwen35-35b-a3b.yaml  qwen3_5_35b_a3b_gptq_int4.yaml  qwen3_6_35b_a3b_fp8.yaml  qwen3_asr.yaml  qwen3_embedding_4b.yaml  qwen3_embedding_8b.yaml  qwen3_tts_base.yaml  qwen3_tts_customvoice.yaml  qwen3_tts_voicedesign.yaml  voxcpm2.yaml
backend/data/: logs.db  logs.db-shm  logs.db-wal  nous.db
backend/data/archive/: logs.db  logs.db-shm  logs.db-wal
backend/migrations/: 2026-04-21-api-gateway.sql  2026-04-22-services-v3.sql  2026-04-23-keys-m10.sql  2026-04-25-passkey-totp.sql  2026-05-14-v15-execution-tasks.sql  wave1_memory.sql
backend/nodes/: __init__.py
backend/nodes/flux2-components/: executor.py  node.yaml
backend/nodes/image-color-match/: executor.py  node.yaml
backend/nodes/image-io/: executor.py  node.yaml
backend/nodes/lcs/: executor.py  node.yaml
backend/nodes/qwen3-tts/: executor.py  node.yaml
backend/nodes/seedvr2/: executor.py  node.yaml
backend/nodes/voxcpm2/: executor.py  node.yaml
backend/scripts/: dev-serve.sh  diag_pr4_ssim.py  download_vl_model.py  install_tts_deps.py  migrate_agent_id.py  migrate_sqlite_to_pg.py  migrate_v1prime_image_layout.py  run_tests_logged.sh  smoke_pr2_cancel.py  smoke_pr2_cross_device.py  smoke_pr4_components.py  smoke_pr6_l2.py  spike_flux2_compose.py  start_vllm.sh  verify_flux2_cross_device.py
backend/src/: config.py  errors.py
backend/src/api/: admin_session.py  deps.py  deps_admin.py  deps_auth.py  login_throttle.py  main.py  middleware.py  response_cache.py  startup_banner.py  websocket.py  ws_tts.py
backend/src/gpu/: detector.py  model_manager.py
backend/src/models/: admin_credentials.py  api_gateway.py  context_cache.py  database.py  execution_task.py  file.py  instance_api_key.py  llm_usage.py  log_entry.py  memory.py  model_metadata.py  model_runtime_override.py  preset_api_key.py  response_session.py  schemas.py  service_instance.py  status_sample.py  task.py  tts_usage.py  voice_preset.py  workflow.py  workflow_app.py
backend/src/runner/: client.py  fake_adapter.py  fake_tts_adapter.py  gpu_free_probe.py  llm_runner.py  pipe_channel.py  protocol.py  runner_modelmanager.py  runner_process.py  supervisor.py
backend/src/services/: agent_manager.py  alert_rule.py  audio_io.py  cache_metrics.py  component_scanner.py  component_state.py  context_cache_service.py  engine_catalog.py  execution_task_serialize.py  gpu_allocator.py  gpu_monitor.py  gpu_thermal_guard.py  image_output_storage.py  latent_storage.py  llm_service.py  log_collector.py  log_db.py  log_store.py  lora_scanner.py  model_manager.py  model_metadata_service.py  model_resolver.py  model_scanner.py  model_scheduler.py  node_routing.py  ollama_adapter.py  prediction_service.py  quota_gate.py  rate_limiter.py  resource_pack.py  responses_service.py  runner_models.py  runtime_metrics.py  runtime_override_store.py  safe_signal.py  service_models.py  service_schema.py  skill_manager.py  skill_tools.py  startup_reconcile.py  (+15 more)
backend/src/utils/: constants.py  path_security.py  secret_crypto.py  snowflake.py  url_security.py
backend/src/workers/: celery_app.py  engine_registry.py  tts_worker.py  video_worker.py
backend/tests/: conftest.py  conftest_logs.py  test_adapter_ram_stash.py  test_adapter_stdout_drain.py  test_admin_auth_unified.py  test_admin_gate_ollama_exempt.py  test_agent_id_column.py  test_agent_session_binding.py  test_alembic_baseline.py  test_alert_rule.py  test_anima_engine_dispatch.py  test_anthropic_compat.py  test_api_agents.py  test_api_audio.py  test_api_cors.py  test_api_dashboard.py  test_api_engines.py  test_api_errors.py  test_api_execution_tasks.py  test_api_files.py  test_api_gateway_catalog.py  test_api_gateway_crud.py  test_api_gateway_e2e.py  test_api_gateway_models.py  test_api_generate.py  test_api_key_matrix.py  test_api_keys_global.py  test_api_memory.py  test_api_monitor.py  test_api_runners.py  test_api_skills.py  test_api_tasks.py  test_api_tts.py  test_api_understand.py  test_api_usage.py  test_api_voices.py  test_api_workflows.py  test_apply_loras_clear.py  test_apps_grant_auth.py  test_arch_anima_predict2.py  (+230 more)
backend/tests/chaos/: test_db_flaky.py  test_pipe_slow_consumer.py  test_worker_crash_storm.py
backend/tests/fixtures/: comfy_sigmas_shift3_steps20.json  fake_runner.py  fake_runner_client.py  fake_vllm.py  hardware_topo.py  runner_models.yaml  runner_tts_models.yaml
backend/tests/golden/: tutor_full.txt
backend/tests/integration/: conftest.py  test_lane0_idle_ttl_regression.py  test_modelmanager_consolidation_regression.py  test_runner_resilience.py  test_scheduler_degradation.py  test_workflow_lifecycle.py
backend/tests/manual/: .gitignore  probe_zimage_gguf.py  probe_zimage_sigmas.py  probe_zimage_singlefile.py  smoke_anima_comfy_parity.py  smoke_anima_pr1.py  smoke_anima_pr2.py  smoke_anima_pr3.py  smoke_anima_pr4.py  smoke_anima_pr5b.py  smoke_anima_pr7.py  smoke_cross_gpu_offload.py  smoke_flux2_edit.py  smoke_fp8_compact.py  smoke_granular_pr1.py  smoke_ideogram4.py  smoke_ideogram4_dual_dispatch.py  smoke_ideogram4_offload_fit.py  smoke_ideogram4_singlefile.py  smoke_ideogram4_stream.py  smoke_ideogram4_unload_vram.py  smoke_image_ab.py  smoke_image_batch.py  smoke_image_progress_l3.py  smoke_latent_relay.py  smoke_lcs_color_anchor.py  smoke_lcs_sharpness.py  (+34 more)
nous-core/: Cargo.toml
nous-core/src/: audio.rs  files.rs  gpu.rs  main.rs  system.rs
(+582 files in other folders)
