[project]
name = "nous-center"
version = "0.1.0"
description = "AI media workstation - image/video/tts generation & multimodal understanding"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "celery[redis]>=5.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx[socks]>=0.28",
    "websockets>=14.0",
    "python-multipart>=0.0.22",
    "bcrypt>=4.0",
    "psutil>=6.0",
    # WebAuthn / passkey + TOTP for /sys/admin/passkey + /sys/admin/totp routes
    "webauthn>=2.5",
    "pyotp>=2.9",
    # msgpack: V1.5 GPU Runner IPC wire format (main process <-> image/TTS
    # runner subprocess over multiprocessing.Pipe). Small, pure-wheel, no
    # native CUDA deps — safe in the API-server venv. See spec 3.3.
    "msgpack>=1.1",
]

[project.optional-dependencies]
# Inference extras: vllm + modelscope pull in torch/CUDA kernels (~11GB).
# Backend API server code does NOT import these — it talks to vllm subprocess
# via HTTP. They are only needed in the environment that actually runs
# `vllm serve` (see backend/scripts/start_vllm.sh) or hits modelscope directly.
#
# Install:
#   - API server dev/test:  uv sync              (no inference deps, small venv)
#   - vLLM inference host:  uv sync --extra inference
#
# This split prevents the pytest test-venv from dlopening libcudart on dual-GPU
# hosts, which otherwise conflicts with gnome-shell's GPU1 compositor and
# causes NVIDIA driver resets (X session logout). See conftest.py top-of-file
# comment about CUDA_VISIBLE_DEVICES for additional defense-in-depth.
inference = [
    # vllm 0.19.0 + pydantic 2.12 combo hits an ArgsKwargs validation bug on
    # subprocess startup. 0.19.1 is the latest patch; if it still fails, pin
    # pydantic<2.12 as a workaround.
    "vllm>=0.19.1",
    "modelscope>=1.34.0",
]

# Image generation extras: diffusers + accelerate + peft for Flux.2 family.
# Install: uv sync --extra image
# Same isolation reasoning as `inference`: API server code never imports these.
image = [
    # diffusers main has Flux.2 + Modular Diffusers (ModularPipeline +
    # ComponentsManager). Modular Diffusers is EXPERIMENTAL (0.38.0.dev0) — its API
    # breaks across commits. PIN to the exact commit the image engine was validated
    # against (spec 2026-05-22-image-engine-modular-diffusers). 升级前必须跑
    # `tests/manual/smoke_image_ab.py`(见 CLAUDE.md「图像引擎」),SSIM 过阈值再 bump。
    "diffusers @ git+https://github.com/huggingface/diffusers.git@c8eba433adf1f90d7fcc70092562ea50789ee8fb",
    "accelerate>=1.0",
    "peft>=0.13",
    "safetensors>=0.4",
    "sentencepiece>=0.2",  # Qwen3 tokenizer
    "protobuf>=4.25",      # transformers tokenizer protobuf path
    # PR-2 SSIM regression test gate (tests/test_image_sampler_ssim.py) —
    # only loaded when NOUS_SSIM_TEST=1. scikit-image pulls scipy.
    "scikit-image>=0.24",
    # fp8 weight-only 量化(torchao Float8WeightOnlyConfig)——大模型塞小卡(省 ~½ 显存)。
    # 在 torch 2.10 即可(只省显存;Ampere 无 fp8 核不加速,见 spec 2026-05-25)。
    "torchao>=0.17",
]

[tool.uv]
override-dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-forked>=1.6",
    "httpx>=0.28",
    "ruff>=0.9",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: real-GPU tests, skipped in CI (run on dev box with pytest -m e2e)",
    "integration: mock-runner-subprocess integration tests",
    "chaos: fault-injection tests, weekly manual run",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Late imports are intentional — either for model registration order,
# circular-import avoidance, or post-`create_app` exception handler wiring.
"src/api/main.py" = ["E402"]
"src/api/routes/workflows.py" = ["E402"]
"src/services/log_db.py" = ["E402"]
"src/workers/tts_engines/voxcpm2.py" = ["E402"]
# Tests commonly append fixtures/imports as suites grow (TDD flow), so allow
# module-level imports after other statements. `conftest.py` additionally needs
# to set env vars (CUDA_VISIBLE_DEVICES, NOUS_DISABLE_BG_TASKS) before any src
# import to protect the test session from driver-level crashes.
"tests/**/*.py" = ["E402"]
