[project]
name = "nous-center"
version = "0.1.0"
description = "AI media workstation - image/video/tts generation & multimodal understanding"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "celery[redis]>=5.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx[socks]>=0.28",
    "websockets>=14.0",
    "python-multipart>=0.0.22",
    "bcrypt>=4.0",
    "psutil>=6.0",
    # WebAuthn / passkey + TOTP for /sys/admin/passkey + /sys/admin/totp routes
    "webauthn>=2.5",
    "pyotp>=2.9",
    # msgpack: V1.5 GPU Runner IPC wire format (main process <-> image/TTS
    # runner subprocess over multiprocessing.Pipe). Small, pure-wheel, no
    # native CUDA deps — safe in the API-server venv. See spec 3.3.
    "msgpack>=1.1",
    # ColorMatch inline 节点(image_color_match)— mkl 等色彩迁移(对齐 ComfyUI-KJNodes)。
    # inline 节点在主 API 进程跑(非 image runner 子进程)→ 进主 deps;无 CUDA 依赖(matplotlib/
    # scipy/numpy),不破坏 venv 的 CUDA 隔离初衷。
    "color-matcher>=0.6.0",
]

[project.optional-dependencies]
# Inference extras: vllm + modelscope pull in torch/CUDA kernels (~11GB).
# Backend API server code does NOT import these — it talks to vllm subprocess
# via HTTP. They are only needed in the environment that actually runs
# `vllm serve` (see backend/scripts/start_vllm.sh) or hits modelscope directly.
#
# Install:
#   - API server dev/test:  uv sync              (no inference deps, small venv)
#   - vLLM inference host:  uv sync --extra inference
#
# This split prevents the pytest test-venv from dlopening libcudart on dual-GPU
# hosts, which otherwise conflicts with gnome-shell's GPU1 compositor and
# causes NVIDIA driver resets (X session logout). See conftest.py top-of-file
# comment about CUDA_VISIBLE_DEVICES for additional defense-in-depth.
# TTS extras: cosyvoice2 引擎运行时依赖**最小子集**(CosyVoice repo 经 sys.path 引入,代码不装包)。
# 不能整套灌它的 requirements.txt —— 钉 diffusers==0.29.0/numpy 1.26 等,会撞图像引擎钉死 commit。
# 本子集真机收敛验证过(import CosyVoice2 OK,不触碰 diffusers/numpy/torch 钉)。
tts = [
    "hyperpyyaml>=1.2",
    "onnxruntime-gpu>=1.18",
    "openai-whisper>=20231117",
    "conformer>=0.3",
    "inflect>=7.3",
    "lightning>=2.2",
    "wetext>=0.1",
    "hydra-core>=1.3",
    "gdown>=5.1",
    "wget>=3.2",
    "pyworld>=0.3",
    "librosa>=0.10",
    "pyarrow>=18",
    "phonemizer>=3.2",
    "rootutils>=1.0",
    # VoxCPM2 引擎(openbmb;纯增依赖 torch-complex/torchcodec,不撞钉死项)。
    "voxcpm>=2.0",
]

inference = [
    # 全栈 bump 2026-06-03(spike 2f452cf 验证可行,SSIM 0.9772):vllm 0.22.0 钉 torch==2.11.0
    # (PyPI 默认即 cu13:cuda-toolkit==13.0.2 + nvidia-cudnn-cu13),对齐 ComfyUI 的 torch 2.11+cu130
    # / Blackwell。vllm 0.22 依赖 nvidia-cutlass-dsl[cu13] + flashinfer 0.6.11,全 cu13。
    # 动机:栈更新统一到 cu13(fp8 加速已证伪解耦,见 7b2758d)。
    "vllm>=0.22.0",
    "modelscope>=1.34.0",
]

# Image generation extras: diffusers + accelerate + peft for Flux.2 family.
# Install: uv sync --extra image
# Same isolation reasoning as `inference`: API server code never imports these.
image = [
    # diffusers main has Flux.2 + Modular Diffusers + Ideogram4Pipeline(2026-06-11 bump:
    # Ideogram-4 接入需要;golden 回归 SSIM=1.0 零回归,spike 真机出图验过)。(ModularPipeline +
    # ComponentsManager). Modular Diffusers is EXPERIMENTAL (0.38.0.dev0) — its API
    # breaks across commits. PIN to the exact commit the image engine was validated
    # against (spec 2026-05-22-image-engine-modular-diffusers). 升级前必须跑
    # `tests/manual/smoke_image_ab.py`(见 CLAUDE.md「图像引擎」),SSIM 过阈值再 bump。
    "diffusers @ git+https://github.com/huggingface/diffusers.git@784fa62652fb2719d415830f918fc32a49ecc7a1",
    "accelerate>=1.0",
    "peft>=0.13",
    "safetensors>=0.4",
    "sentencepiece>=0.2",  # Qwen3 tokenizer
    "protobuf>=4.25",      # transformers tokenizer protobuf path
    # PR-2 SSIM regression test gate (tests/test_image_sampler_ssim.py) —
    # only loaded when NOUS_SSIM_TEST=1. scikit-image pulls scipy.
    "scikit-image>=0.24",
    # fp8 weight-only 量化(torchao Float8WeightOnlyConfig)——大模型塞小卡(省 ~½ 显存)。
    # 在 torch 2.10 即可(只省显存;Ampere 无 fp8 核不加速,见 spec 2026-05-25)。
    "torchao>=0.17",
    # einops:rearrange / Rearrange / repeat — anima MiniTrainDIT 用(spec 2026-05-26-anima-port)。
    # 极小(~150KB),diffusers 内部也用。
    "einops>=0.8",
    # SeedVR2 超分引擎(vendored NumZ src,Apache 2.0,见 seedvr2_vendor/)依赖。
    # 无 flash-attn/无自编译 CUDA;flash-attn 可选(回退 SDPA)。PR-1 集成(project_seedvr2_integration)。
    "torchvision==0.26.0",          # SeedVR2 VAE/图像变换;钉 0.26.0(配 torch 2.11,vllm 0.22 也要这版)
    "torchaudio==2.11.0",           # TTS(cosyvoice2 等)音频 IO;2026-06-03 全栈 bump 时掉了(回归:
                                    # cosyvoice2 ModuleNotFoundError),钉 2.11.0 配 torch 2.11
    "omegaconf>=2.3.0",             # SeedVR2 config
    "rotary_embedding_torch>=0.5.3",  # SeedVR2 DiT RoPE
    "gguf",                         # SeedVR2 7B GGUF 量化加载
    "opencv-python",                # SeedVR2 视频/图像 I/O
]

[tool.uv]
override-dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-forked>=1.6",
    "httpx>=0.28",
    "ruff>=0.9",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: real-GPU tests, skipped in CI (run on dev box with pytest -m e2e)",
    "integration: mock-runner-subprocess integration tests",
    "chaos: fault-injection tests, weekly manual run",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
# vendored 第三方代码(NumZ SeedVR2 推理核心,Apache 2.0)—— 不归我们 lint,原样保留
# 便于跟上游对照/升级(改动它 = 偏离上游 = 难维护)。见 project_seedvr2_integration。
extend-exclude = ["src/services/inference/seedvr2_vendor", "src/services/inference/lcs_vendor"]

[tool.ruff.lint.per-file-ignores]
# Late imports are intentional — either for model registration order,
# circular-import avoidance, or post-`create_app` exception handler wiring.
"src/api/main.py" = ["E402"]
"src/api/routes/workflows.py" = ["E402"]
"src/services/log_db.py" = ["E402"]
"src/workers/tts_engines/voxcpm2.py" = ["E402"]
# Tests commonly append fixtures/imports as suites grow (TDD flow), so allow
# module-level imports after other statements. `conftest.py` additionally needs
# to set env vars (CUDA_VISIBLE_DEVICES, NOUS_DISABLE_BG_TASKS) before any src
# import to protect the test session from driver-level crashes.
"tests/**/*.py" = ["E402"]
