[package]
name = "nous-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
nvml-wrapper = "0.10"
sysinfo = "0.34"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
