# wasm/audio-engine/Cargo.toml
[package]
name = "audio-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "pcm", "aac"] }
rubato = "0.16"
hound = "3.5"

[profile.release]
opt-level = "s"
lto = true
